--- a/src/main/resources/info_pane.fxml
+++ b/src/main/resources/info_pane.fxml
@@ -4,64 +4,67 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-
-<fx:root id="info-pane" fx:id="bottomAnchorPane" prefHeight="25.0" prefWidth="1920.0" styleClass="pane" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" stylesheets="@styling/stylesheet.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
-               <children>
-                  <Label text="Canvas Size: " />
-                  <Label fx:id="canvasWidth" text="-" />
-                  <Label text="x" />
-                  <Label fx:id="canvasHeight" text="-" />
-               </children>
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
-               <children>
-                  <Label text="X-Pos: " />
-                  <Label prefWidth="40.0" text="-" fx:id="xPos" />
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
-               <children>
-                  <Label text="Y-Pos: " />
-                  <Label fx:id="yPos" prefWidth="40.0" text="-" />
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
-               <children>
-                  <Label text="Layer Size: " />
-                  <Label fx:id="layerWidth" text="-" />
-                  <Label text="x" />
-                  <Label fx:id="layerHeight" prefWidth="40.0" text="-" />
-               </children>
-               <padding>
-                  <Insets left="10.0" right="10.0" />
-               </padding>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
-               <children>
-                  <Label text="Layer Rotation: " />
-                  <Label fx:id="layerRotation" prefWidth="40.0" text="-" />
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
-         </children>
-      </HBox>
-   </children>
+<fx:root xmlns:fx="http://javafx.com/fxml/1" id="info-pane" prefHeight="25.0" prefWidth="1920.0"
+  styleClass="pane" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171"
+  fx:id="bottomAnchorPane">
+  <children>
+    <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+      AnchorPane.topAnchor="0.0" alignment="CENTER_LEFT"
+      prefHeight="100.0" prefWidth="200.0" stylesheets="@styling/stylesheet.css">
+      <children>
+        <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
+          <HBox.margin>
+            <Insets left="10.0"/>
+          </HBox.margin>
+          <children>
+            <Label text="Canvas Size: "/>
+            <Label text="-" fx:id="canvasWidth"/>
+            <Label text="x"/>
+            <Label text="-" fx:id="canvasHeight"/>
+          </children>
+          <padding>
+            <Insets right="10.0"/>
+          </padding>
+        </HBox>
+        <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
+          <children>
+            <Label text="X-Pos: "/>
+            <Label prefWidth="40.0" text="-" fx:id="xPos"/>
+          </children>
+          <padding>
+            <Insets left="10.0"/>
+          </padding>
+        </HBox>
+        <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
+          <children>
+            <Label text="Y-Pos: "/>
+            <Label prefWidth="40.0" text="-" fx:id="yPos"/>
+          </children>
+          <padding>
+            <Insets left="10.0"/>
+          </padding>
+        </HBox>
+        <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
+          <children>
+            <Label text="Layer Size: "/>
+            <Label text="-" fx:id="layerWidth"/>
+            <Label text="x"/>
+            <Label prefWidth="40.0" text="-" fx:id="layerHeight"/>
+          </children>
+          <padding>
+            <Insets left="10.0" right="10.0"/>
+          </padding>
+        </HBox>
+        <HBox alignment="CENTER_LEFT" styleClass="infopane-item">
+          <children>
+            <Label text="Layer Rotation: "/>
+            <Label prefWidth="40.0" text="-" fx:id="layerRotation"/>
+          </children>
+          <padding>
+            <Insets left="10.0"/>
+          </padding>
+        </HBox>
+      </children>
+    </HBox>
+  </children>
 </fx:root>
