--- a/src/main/resources/utility_pane.fxml
+++ b/src/main/resources/utility_pane.fxml
@@ -2,9 +2,10 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-
-<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <VBox fx:id="VBoxContainer" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-   </children>
+<fx:root xmlns:fx="http://javafx.com/fxml/1" type="AnchorPane"
+  xmlns="http://javafx.com/javafx/8.0.171">
+  <children>
+    <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+      AnchorPane.topAnchor="0.0" fx:id="VBoxContainer"/>
+  </children>
 </fx:root>
