--- a/src/main/resources/color_picker.fxml
+++ b/src/main/resources/color_picker.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<fx:root maxHeight="48.0" minHeight="48.0" prefHeight="48.0" styleClass="pane" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ColorPicker fx:id="colorPicker" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-   </children>
+<fx:root xmlns:fx="http://javafx.com/fxml/1" maxHeight="48.0" minHeight="48.0" prefHeight="48.0"
+  styleClass="pane" stylesheets="@styling/stylesheet.css" type="AnchorPane"
+  xmlns="http://javafx.com/javafx/8.0.171">
+  <children>
+    <ColorPicker AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+      AnchorPane.topAnchor="0.0" fx:id="colorPicker"/>
+  </children>
 </fx:root>
