--- a/src/main/resources/root.fxml
+++ b/src/main/resources/root.fxml
@@ -2,25 +2,32 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-
-<fx:root prefHeight="1080.0" prefWidth="1920.0" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root xmlns:fx="http://javafx.com/fxml/1" prefHeight="1080.0" prefWidth="1920.0"
+  stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171">
   <children>
-    <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+    <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+      AnchorPane.topAnchor="0.0" prefHeight="200.0" prefWidth="200.0">
+      <bottom>
+        <AnchorPane BorderPane.alignment="CENTER" prefHeight="25.0" prefWidth="1920.0"
+          fx:id="bottomAnchorPane"/>
+      </bottom>
+      <center>
+        <AnchorPane BorderPane.alignment="CENTER" cache="true" cacheHint="SPEED"
+          maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="pane"
+          fx:id="centerPane"/>
+      </center>
+      <left>
+        <AnchorPane BorderPane.alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
+          prefWidth="64.0" styleClass="pane" fx:id="leftAnchorPane"/>
+      </left>
       <right>
-        <AnchorPane fx:id="rightAnchorPane" prefWidth="300.0" styleClass="pane" BorderPane.alignment="CENTER" />
+        <AnchorPane BorderPane.alignment="CENTER" prefWidth="300.0" styleClass="pane"
+          fx:id="rightAnchorPane"/>
       </right>
       <top>
-        <AnchorPane fx:id="topAnchorPane" prefHeight="64.0" prefWidth="200.0" styleClass="pane" BorderPane.alignment="CENTER" />
+        <AnchorPane BorderPane.alignment="CENTER" prefHeight="64.0" prefWidth="200.0" styleClass="pane"
+          fx:id="topAnchorPane"/>
       </top>
-      <left>
-        <AnchorPane fx:id="leftAnchorPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefWidth="64.0" styleClass="pane" BorderPane.alignment="CENTER" />
-      </left>
-         <center>
-            <AnchorPane fx:id="centerPane" cache="true" cacheHint="SPEED" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="pane" BorderPane.alignment="CENTER" />
-         </center>
-         <bottom>
-            <AnchorPane fx:id="bottomAnchorPane" prefHeight="25.0" prefWidth="1920.0" BorderPane.alignment="CENTER" />
-         </bottom>
     </BorderPane>
   </children>
 </fx:root>
