Fixed order of toolbar FXML file and tweak raster pen size

--- a/src/main/resources/toolbar.fxml
+++ b/src/main/resources/toolbar.fxml
@@ -13,109 +13,44 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<fx:root xmlns:fx="http://javafx.com/fxml/1" id="toolbar-pane" minHeight="-Infinity" minWidth="-Infinity"
-  prefHeight="100.0" prefWidth="600.0" stylesheets="@styling/stylesheet.css"
-  type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171">
+
+<fx:root id="toolbar-pane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="600.0" stylesheets="@styling/stylesheet.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-      AnchorPane.topAnchor="0.0" prefHeight="200.0" prefWidth="100.0">
+    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
-        <HBox alignment="CENTER_LEFT" prefHeight="67.0" prefWidth="200.0" spacing="10.0">
-          <VBox.margin>
-            <Insets/>
-          </VBox.margin>
-          <children>
-            <Button disable="true" mnemonicParsing="false" onAction="#undo" fx:id="undoButton">
-              <graphic>
-                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                  preserveRatio="true">
-                  <image>
-                    <Image url="@images/light/undo.png"/>
-                  </image>
-                </ImageView>
-              </graphic>
-              <tooltip>
-                <Tooltip text="Undo"/>
-              </tooltip>
-            </Button>
-            <Button disable="true" mnemonicParsing="false" onAction="#redo" fx:id="redoButton">
-              <graphic>
-                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                  preserveRatio="true">
-                  <image>
-                    <Image url="@images/light/redo.png"/>
-                  </image>
-                </ImageView>
-              </graphic>
-              <tooltip>
-                <Tooltip text="Redo"/>
-              </tooltip>
-            </Button>
-            <Button layoutX="148.0" layoutY="21.0" mnemonicParsing="false"
-              onAction="#centerViewport">
-              <graphic>
-                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                  preserveRatio="true">
-                  <image>
-                    <Image url="@images/light/center.png"/>
-                  </image>
-                </ImageView>
-              </graphic>
-              <tooltip>
-                <Tooltip text="Center Viewport"/>
-              </tooltip>
-            </Button>
-            <Separator orientation="VERTICAL">
-              <HBox.margin>
-                <Insets bottom="10.0" left="5.0" top="10.0"/>
-              </HBox.margin>
-              <opaqueInsets>
-                <Insets/>
-              </opaqueInsets>
-            </Separator>
-          </children>
-          <padding>
-            <Insets left="10.0"/>
-          </padding>
-        </HBox>
         <MenuBar>
           <menus>
             <Menu mnemonicParsing="false" text="File">
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#openImageChooser" text="Import Image">
                   <accelerator>
-                    <KeyCodeCombination alt="UP" code="I" control="DOWN" meta="UP" shift="UP"
-                      shortcut="UP"/>
+                    <KeyCodeCombination alt="UP" code="I" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                   </accelerator>
                   <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                      preserveRatio="true">
+                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                        <Image url="@images/light/open_folder.png"/>
+                        <Image url="@images/light/open_folder.png" />
                       </image>
                     </ImageView>
                   </graphic>
                 </MenuItem>
                 <MenuItem mnemonicParsing="false" onAction="#exportImage" text="Export Image">
                   <accelerator>
-                    <KeyCodeCombination alt="UP" code="E" control="DOWN" meta="UP" shift="UP"
-                      shortcut="UP"/>
+                    <KeyCodeCombination alt="UP" code="E" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                   </accelerator>
                   <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                      preserveRatio="true">
+                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                        <Image url="@images/light/save.png"/>
+                        <Image url="@images/light/save.png" />
                       </image>
                     </ImageView>
                   </graphic>
                 </MenuItem>
                 <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit">
                   <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                      preserveRatio="true">
+                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                        <Image url="@images/light/exit.png"/>
+                        <Image url="@images/light/exit.png" />
                       </image>
                     </ImageView>
                   </graphic>
@@ -124,32 +59,26 @@
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
               <items>
-                <MenuItem disable="true" mnemonicParsing="false" onAction="#undo"
-                  text="Undo N/A" fx:id="undoMenuItem">
+                <MenuItem fx:id="undoMenuItem" disable="true" mnemonicParsing="false" onAction="#undo" text="Undo N/A">
                   <accelerator>
-                    <KeyCodeCombination alt="UP" code="Z" control="DOWN" meta="UP" shift="UP"
-                      shortcut="UP"/>
+                    <KeyCodeCombination alt="UP" code="Z" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                   </accelerator>
                   <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                      preserveRatio="true">
+                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                        <Image url="@images/light/undo.png"/>
+                        <Image url="@images/light/undo.png" />
                       </image>
                     </ImageView>
                   </graphic>
                 </MenuItem>
-                <MenuItem disable="true" mnemonicParsing="false" onAction="#redo"
-                  text="Redo N/A" fx:id="redoMenuItem">
+                <MenuItem fx:id="redoMenuItem" disable="true" mnemonicParsing="false" onAction="#redo" text="Redo N/A">
                   <accelerator>
-                    <KeyCodeCombination alt="UP" code="Y" control="DOWN" meta="UP" shift="UP"
-                      shortcut="UP"/>
+                    <KeyCodeCombination alt="UP" code="Y" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                   </accelerator>
                   <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                      preserveRatio="true">
+                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                        <Image url="@images/light/redo.png"/>
+                        <Image url="@images/light/redo.png" />
                       </image>
                     </ImageView>
                   </graphic>
@@ -160,14 +89,12 @@
               <items>
                 <MenuItem mnemonicParsing="false" onAction="#centerViewport" text="Center Viewport">
                   <accelerator>
-                    <KeyCodeCombination alt="UP" code="SPACE" control="DOWN" meta="UP" shift="UP"
-                      shortcut="UP"/>
+                    <KeyCodeCombination alt="UP" code="SPACE" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                   </accelerator>
                   <graphic>
-                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true"
-                      preserveRatio="true">
+                    <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                        <Image url="@images/light/center.png"/>
+                        <Image url="@images/light/center.png" />
                       </image>
                     </ImageView>
                   </graphic>
@@ -176,11 +103,65 @@
             </Menu>
             <Menu disable="true" mnemonicParsing="false" text="Help">
               <items>
-                <MenuItem mnemonicParsing="false" text="About"/>
+                <MenuItem mnemonicParsing="false" text="About" />
               </items>
             </Menu>
           </menus>
         </MenuBar>
+        <HBox alignment="CENTER_LEFT" prefHeight="67.0" prefWidth="200.0" spacing="10.0">
+          <VBox.margin>
+            <Insets />
+          </VBox.margin>
+          <children>
+            <Button fx:id="undoButton" disable="true" mnemonicParsing="false" onAction="#undo">
+              <graphic>
+                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@images/light/undo.png" />
+                  </image>
+                </ImageView>
+              </graphic>
+              <tooltip>
+                <Tooltip text="Undo" />
+              </tooltip>
+            </Button>
+            <Button fx:id="redoButton" disable="true" mnemonicParsing="false" onAction="#redo">
+              <graphic>
+                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@images/light/redo.png" />
+                  </image>
+                </ImageView>
+              </graphic>
+              <tooltip>
+                <Tooltip text="Redo" />
+              </tooltip>
+            </Button>
+            <Separator orientation="VERTICAL">
+              <HBox.margin>
+                <Insets bottom="10.0" left="5.0" top="10.0" />
+              </HBox.margin>
+              <opaqueInsets>
+                <Insets />
+              </opaqueInsets>
+            </Separator>
+            <Button layoutX="148.0" layoutY="21.0" mnemonicParsing="false" onAction="#centerViewport">
+              <graphic>
+                <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@images/light/center.png" />
+                  </image>
+                </ImageView>
+              </graphic>
+              <tooltip>
+                <Tooltip text="Center Viewport" />
+              </tooltip>
+            </Button>
+          </children>
+          <padding>
+            <Insets left="10.0" />
+          </padding>
+        </HBox>
       </children>
     </VBox>
   </children>
